--- a/texttop/style.scss
+++ b/texttop/style.scss
@@ -1,9 +1,12 @@
-$green: #00a650;
-$red: #f26522;
+$green: #658b5b;
+$red: #f16f39;
 $fontcol: #2c2c2c;
-$bgcol: #f7f7f7;
+$bgcol: #fff;
 $fontfam: "Open Sans", Helvetica, Arial, Verdana, sans-serif;
-$fonttit: "Roboto Slab", Helvetica, Arial, Verdana, sans-serif;
+@font-face {
+  font-family: bebas;
+  src: url(img/Bebas_Neue_Cyrillic.ttf);
+}
 
 $medium: 'screen and (min-width: 577px)';
 $xlarge: 'screen and (min-width: 1500px)';
@@ -28,22 +31,54 @@ body {
   }
 }
 
+#menu-container {
+  position: relative;
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 header {
-  padding: 1em 10% 2em 10%;
-  background: linear-gradient(0.5turn, $green, $green, $green);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: $bgcol;
+
+  img {
+    width: 100%;
+    height: auto;
+    background-color: $green;
+    padding: 0 0 1.5em 0;
+  }
 
   h1 {
     font-size: 3em;
-    font-family: $fonttit;
+    font-family: bebas;
+    margin: 0;
+    padding: 1em 0 0 0;
+    text-align: center;
+    font-weight: 400;
+    color: #608cc4;
+    background-color: #faf9e1;
   }
 
   h2 {
     font-size: 1em;
     font-weight: 600;
+    margin: 2em 20% 2em 20%;
+    line-height: 1.6;
+
+    p {
+      margin: 0 0 0.5em 0;
+    }
+
+    span {
+      color: $green;
+      font-weight: 800;
+      &.green {
+        font-size: 2em;
+      }
+    }
   }
 }
 
