fix typo and gen_axis

--- a/texttop/style.scss
+++ b/texttop/style.scss
@@ -576,6 +576,12 @@ section.dark {
     }
   }
 
+  g#x_ax_gen {
+    path, line {
+      display: none;
+    }
+  }
+
   #labels_gen {
     position: absolute;
     display: flex;
