--- a/texttop/style.scss
+++ b/texttop/style.scss
@@ -228,6 +228,7 @@ main {
       grid-template-columns: 1fr;
 
       svg {
+        display: inherit;
         overflow: visible;
       }
 
@@ -236,8 +237,8 @@ main {
       }
 
       p {
-        margin: 0;
-        font-size: 0.85em;
+        margin: 0 0 0.75em 0;
+        font-size: 0.75em;
         line-height: 1;
       }
 
@@ -275,7 +276,7 @@ main {
 
       span.ktne {
         white-space: nowrap;
-        display: none;
+        //display: none;
       }
 
     }
@@ -562,6 +563,10 @@ section.dark {
     }
   }
 
+  .data_caption {
+    margin-top: 2em;
+  }
+
   figure {
     height: 25em;
     margin: 0 1em 0 1em;
@@ -570,9 +575,14 @@ section.dark {
     @media #{$large} {
       margin: 0 10% 0 10%;
     }
+
+    svg {
+      overflow: visible;
+    }
   }
 
   path#x_helper {
+    display: none;
     fill: darken($bgcol, 5%);
     transition: fill 0.5s;
     &.dark {
@@ -621,6 +631,32 @@ section.dark {
     stroke: $fontcol;
     stroke-opacity: 0.25;
   }
+
+  #gen_helper {
+    margin: 0 1em 0 1em;
+
+    @media #{$large} {
+      margin: 0 10% 0 10%;
+    }
+
+    p {
+      display: inline-block;
+      padding: 0.5em;
+      margin: 0;
+      text-align: center;
+      font-size: 0.85em;
+      border: 1px dotted $blue;
+      white-space: nowrap;
+      transition: margin 0.2s;
+    }
+  }
+
+  path#nav_helper {
+    stroke: $blue;
+    fill: none;
+    stroke-dasharray: 1 1;
+
+  }
 }
 
 span.vde {
@@ -642,6 +678,14 @@ span.dirt {
 
   .tippy-backdrop {
     background-color: rgba($bgcol, 0.8);
+  }
+
+  .vde {
+    color: $green;
+  }
+
+  .dirt {
+    color: $red;
   }
 
   p {
