--- a/texttop/style.scss
+++ b/texttop/style.scss
@@ -308,7 +308,8 @@ main {
 
         &.active {
           font-weight: 600;
-          font-size: 1.25em;
+          //font-size: 1.25em;
+          fill: $blue;
         }
       }
 
@@ -330,6 +331,21 @@ main {
         white-space: pre;
         font-size: 0.85em;
       }
+
+      #consumption_nav {
+        pointer-events: none;
+        transition: opacity 0.5s;
+
+        path {
+          fill: none;
+          stroke: lighten($fontcol, 30%);
+        }
+        text {
+          fill: $blue;
+          font-size: 0.75em;
+          font-weight: 600;
+        }
+      }
     }
   }
 
@@ -350,7 +366,7 @@ main {
 
     h4 {
       padding: 0;
-      margin: 1em 0 1em 0;
+      margin: 1em 0 1em 1em;
       pointer-events: auto;
     }
 
