--- a/texttop/style.scss
+++ b/texttop/style.scss
@@ -31,6 +31,10 @@ body {
     box-sizing: border-box;
     outline: none;
   }
+
+  @media #{$mobile} {
+    font-size: 0.85em;
+  }
 }
 
 #menu-container {
@@ -45,30 +49,44 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 
   img {
     width: 100%;
-    height: auto;
+    //height: auto;
     background-color: $calmgreen;
     padding: 0 0 1.5em 0;
+
+    @media #{$mobile} {
+      width: 125vw;
+      margin: 0 -12.5vw 0 -12.5vw;
+    }
   }
 
   h1 {
     font-size: 3em;
     font-family: bebas;
     margin: 0;
-    padding: 1em 0 0 0;
+    padding: 1em 0.75em 0 0.75em;
     text-align: center;
     font-weight: 400;
     color: #608cc4;
     background-color: #faf9e1;
+
+    @media #{$mobile} {
+      font-size: 2.25em;
+    }
   }
 
   h2 {
     font-size: 1em;
     font-weight: 600;
-    margin: 2em 20% 2em 20%;
     line-height: 1.6;
+    margin: 2em 1em 2em 1em;
+
+    @media #{$medium} {
+      margin: 2em 20% 2em 20%;
+    }
 
     p {
       margin: 0 0 0.5em 0;
@@ -124,12 +142,12 @@ main {
 }
 
 #why {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   margin: 3em 1em 2em 1em;
 
   @media #{$medium} {
     margin: 3em 10% 2em 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 
   @media #{$large} {
@@ -146,12 +164,14 @@ main {
     list-style-type: none;
     pointer-events: auto;
 
-    &#why_soc {
-      margin: 0 2em 0 0;
-    }
+    @media #{$medium} {
+      &#why_soc {
+        margin: 0 2em 0 0;
+      }
 
-    &#why_ec {
-      margin: 0 0 0 2em;
+      &#why_ec {
+        margin: 0 0 0 2em;
+      }
     }
 
     li {
@@ -217,12 +237,23 @@ main {
     padding: 1em 0 1em 0;
     font-size: 1rem;
     grid-row: 1 / 2;
-    grid-auto-column: 1 / -1;
+    grid-column: 1 / -1;
 
     #h3_sphere {
       color: $blue;
       font-size: 0.85em;
       text-transform: uppercase;
+      @media #{$mobile} {
+        display: block;
+      }
+    }
+    
+    @media #{$mobile} {
+      font-size: 1em;
+      padding: 0;
+      em {
+        font-size: 1em;
+      }
     }
   }
 
@@ -234,11 +265,25 @@ main {
     grid-template-rows: 1fr;
     grid-template-columns: 1.61fr 1fr;
 
+    @media #{$mobile} {
+      grid-template-rows: 1fr auto;
+      grid-template-columns: 1fr;
+      grid-gap: 0;
+    }
+
     #bars {
       margin: 0 0 0 0;
-      grid-gap: 1.5em;
-      display: grid;
-      grid-template-columns: 1fr;
+      @media #{$mobile} {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+
+      div.bar_vde:first-of-type {
+        margin: 0 1em 0 0;
+        @media #{$medium} {
+          margin: 0 0 2em 0;
+        }
+      }
 
       svg {
         display: inherit;
@@ -259,7 +304,11 @@ main {
         font-size: 1em;
         color: $blue;
         font-weight: 600;
-        margin: 0;
+        margin: 1em 0 2em 0;
+
+        @media #{$mobile} {
+          display: none;
+        }
       }
 
       [data-vde="vde"] {
@@ -296,6 +345,9 @@ main {
 
       span.ktne {
         white-space: nowrap;
+        @media #{$mobile} {
+          display: block;
+        }
         //display: none;
       }
 
@@ -330,15 +382,24 @@ main {
           font-weight: 600;
           //font-size: 1.25em;
         }
+
+        @media #{$mobile} {
+          font-size: 1em;
+        }
       }
 
       #y_axis {
         path {
-          opacity: 0;
+          display: none;
         }
 
         line {
           fill: lighten($fontcol, 85%);
+        }
+
+        @media #{$mobile} {
+          font-size: 0.7em;
+          fill: lighten($fontcol, 50%)
         }
       }
 
@@ -349,6 +410,9 @@ main {
       textPath {
         white-space: pre;
         font-size: 0.85em;
+        @media #{$mobile} {
+          font-size: 0.75em;
+        }
       }
 
       #consumption_nav {
@@ -359,6 +423,7 @@ main {
           fill: none;
           stroke: lighten($fontcol, 30%);
         }
+
         text {
           fill: $blue;
           font-size: 0.75em;
@@ -454,15 +519,15 @@ section.dark {
 }
 
 #costs {
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: auto 1fr auto;
   padding: 1em 0 0 0;
   margin: 1em 1em 0 1em;
 
   @media #{$medium} {
     margin: 1em 10% 0 10%;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
   }
 
   @media #{$large} {
@@ -473,6 +538,10 @@ section.dark {
     grid-column: 1 / -1;
     padding: 0;
     margin: 0 0 0 0;
+    @media #{$mobile} {
+      font-size: 1em;
+      padding: 0;
+    }
 
     p {
       padding: 0;
@@ -499,6 +568,10 @@ section.dark {
     padding: 0;
     margin: 0 2em 0 0;
     max-height: 90vh;
+    @media #{$mobile} {
+      height: 75vh;
+      margin: 0 0 0 0;
+    }
 
     svg {
       overflow: visible;
@@ -513,6 +586,9 @@ section.dark {
       font-size: 0.75em;
       //dominant-baseline: text-after-edge;
       transition: opacity 0.5s;
+      @media #{$mobile} {
+        font-size: 0.7em;
+      }
     }
 
     #t_bubble_lab {
@@ -558,6 +634,9 @@ section.dark {
         font-size: 0.75rem;
         color: $fontcol;
         font-weight: 800;
+        @media #{$mobile} {
+          font-size: 0.95em;
+        }
         //dominant-baseline: text-after-edge;
       }
 
@@ -579,7 +658,9 @@ section.dark {
     span[data-cost] {
       cursor: pointer;
       white-space: nowrap;
-      border-bottom: 2px solid $blue;
+      @media #{$medium} {
+        border-bottom: 2px solid $blue;
+      }
     }
 
     //[data-cost="Вартість палива"] {
@@ -594,6 +675,12 @@ section.dark {
 
 #general, #general2 {
   padding: 1em 0 0 0;
+
+  .h3 {
+    @media #{$mobile} {
+      font-size: 1em;
+    }
+  }
 
   .h3, .data_caption {
     margin: 0 1em 0 1em;
